--- a/index.html
+++ b/index.html
@@ -1,69 +1,63 @@
 <!doctype html>
 <html lang="es">
-  <head>
-    <!-- Básico -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Patitas Car - Transporte Seguro para Mascotas</title>
-    <meta
-      name="description"
-      content="Patitas Car es un servicio profesional de transporte seguro para perros y gatos en Argentina. Traslados locales y de larga distancia con atención personalizada."
-    />
+<head>
+  <!-- Básico -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Favicons / Logo -->
-    <link rel="icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <title>Patitas Car - Transporte Seguro para Mascotas</title>
+  <meta name="description"
+    content="Patitas Car es un servicio profesional de transporte seguro para perros y gatos en Argentina. Traslados locales y de larga distancia con atención personalizada." />
 
-    <!-- Open Graph -->
-    <meta property="og:title" content="Patitas Car - Transporte Seguro para Mascotas" />
-    <meta
-      property="og:description"
-      content="Servicio profesional de transporte seguro para mascotas en toda Argentina. Cuidamos de ellos como familia."
-    />
-    <meta property="og:image" content="https://patitascar.com.ar/og-image.png" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://patitascar.com.ar" />
+  <!-- Favicons / Logo -->
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Patitas Car - Transporte Seguro para Mascotas" />
-    <meta
-      name="twitter:description"
-      content="Transporte profesional y seguro para mascotas en toda Argentina."
-    />
-    <meta name="twitter:image" content="https://patitascar.com.ar/og-image.png" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="Patitas Car - Transporte Seguro para Mascotas" />
+  <meta property="og:description"
+    content="Servicio profesional de transporte seguro para mascotas en toda Argentina. Cuidamos de ellos como familia." />
+  <meta property="og:image" content="https://patitascar.com.ar/og-image.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://patitascar.com.ar" />
 
-    <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Inter:wght@400;500;600&display=swap"
-      rel="stylesheet"
-    />
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Patitas Car - Transporte Seguro para Mascotas" />
+  <meta name="twitter:description" content="Transporte profesional y seguro para mascotas en toda Argentina." />
+  <meta name="twitter:image" content="https://patitascar.com.ar/og-image.png" />
 
-    <!-- SEO estructurado -->
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "PetService",
-        "name": "Patitas Car",
-        "url": "https://patitascar.com.ar",
-        "logo": "https://patitascar.com.ar/logo.png",
-        "image": "https://patitascar.com.ar/og-image.png",
-        "description": "Servicio profesional de transporte seguro para perros y gatos en Argentina.",
-        "telephone": "+54 11 2321 8193",
-        "areaServed": {
-          "@type": "Country",
-          "name": "Argentina"
-        },
-        "priceRange": "$$"
-      }
-    </script>
-  </head>
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Inter:wght@400;500;600&display=swap"
+    rel="stylesheet" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <!-- SEO estructurado -->
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "PetService",
+  "name": "Patitas Car",
+  "url": "https://patitascar.com.ar",
+  "logo": "https://patitascar.com.ar/assets/logo.jpg",
+  "image": "https://patitascar.com.ar/og-image.png",
+  "description": "Servicio profesional de transporte seguro para perros y gatos en Argentina.",
+  "telephone": "+541123218193",
+  "areaServed": {
+    "@type": "Country",
+    "name": "Argentina"
+  },
+  "priceRange": "$$"
+}
+</script>
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
-
