--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     content="Patitas Car es un servicio profesional de transporte seguro para perros y gatos en Argentina. Traslados locales y de larga distancia con atención personalizada." />
 
   <!-- Favicons / Logo -->
-  <link rel="icon" href="/favicon.ico" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" href="https://i.postimg.cc/PqqGKffv/Whats_App_Image_2026_02_11_at_11_41_30.jpg" />
+  <link rel="icon" type="image/png" sizes="32x32" href="https://i.postimg.cc/PqqGKffv/Whats_App_Image_2026_02_11_at_11_41_30.jpg" />
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
   <!-- Open Graph -->
