--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   "@type": "PetService",
   "name": "Patitas Car",
   "url": "https://patitascar.com.ar",
-  "logo": "https://patitascar.com.ar/assets/logo.jpg",
-  "image": "https://patitascar.com.ar/og-image.png",
+  "logo": "https://i.postimg.cc/PqqGKffv/Whats_App_Image_2026_02_11_at_11_41_30.jpg",
+  "image": "https://i.postimg.cc/PqqGKffv/Whats_App_Image_2026_02_11_at_11_41_30.jpg",
   "description": "Servicio profesional de transporte seguro para perros y gatos en Argentina.",
   "telephone": "+541123218193",
   "areaServed": {
